src/objects/Callout_Details__mdt.object
<CustomObject>
    <fields>
        <fullName>DEV__c</fullName>
        <label>DEV</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Endpoint_DEV__c</fullName>
        <label>Endpoint DEV</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Endpoint_PROD__c</fullName>
        <label>Endpoint PROD</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Endpoint_STAG__c</fullName>
        <label>Endpoint STAG</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Endpoint_TEST__c</fullName>
        <label>Endpoint TEST</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PROD__c</fullName>
        <label>PROD</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>STAG__c</fullName>
        <label>STAG</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TEST__c</fullName>
        <label>TEST</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Timeout__c</fullName>
        <label>Timeout</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Callout Details</label>
    <pluralLabel>Callout Details</pluralLabel>
</CustomObject>